manifest/objects/mkto_si__UserPreferences__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>mkto_si__BestBetsFilter__c</fullName>
        <label>Best Bets Filter</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__BestBetsView__c</fullName>
        <defaultValue>&quot;MBB&quot;</defaultValue>
        <label>Best Bets View</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Deactivate_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to remove line break from last interesting moment field,
linebreak persists in  last interesting moment Desc field</description>
        <label>Deactivate_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__LastWhatIsNewVersion__c</fullName>
        <label>Last What&apos;s New Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPagesAWA__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages Anonymous Web Activity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPagesCALL__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPagesIM__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages Interesting Moments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPagesMBB__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages My Best Bets</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPagesME__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages My Email</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPagesMHBB__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages My Best Bets (Hidden)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPagesMTBB__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages My Team&apos;s Best Bets</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPagesMWL__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages My Watch List</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPagesSC__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPagesWA__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages Web Activity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPages__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__ShowNoRestMessage__c</fullName>
        <defaultValue>&quot;yes&quot;</defaultValue>
        <label>Show No Rest Message</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ShowWhatIsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show What&apos;s New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__TimeFrameDays__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Time Frame Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>User Preferences</label>
</CustomObject>